[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Dodger.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -532.407, 94.2194, 0, 0, 0, 0, -5.32535, 87.4647 )
}

[node name="Stage" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Player" type="Node2D" parent="." index="0"]

_sections_unfolded = [ "Material", "Transform" ]

[node name="Dodger" parent="Player" index="0" instance=ExtResource( 2 )]

[node name="Enemies" type="Node2D" parent="." index="1"]

[node name="Camera2D" type="Camera2D" parent="." index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="EnemyTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="StartPosition" type="Position2D" parent="." index="6"]

position = Vector2( 246, -330 )
_sections_unfolded = [ "Transform" ]

[node name="EnemySpawnPath" type="Path2D" parent="." index="7"]

position = Vector2( 246, -330 )
curve = SubResource( 1 )

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]


